fix (layouts): correct alignment of ordered lists

--- a/assets/css/style.scss
+++ b/assets/css/style.scss
@@ -22,6 +22,10 @@ blockquote {
   border-left: 10px solid #d9d9d9;
 }
 
+ol li {
+  list-style-position: inside;
+}
+
 ul li {
   list-style-position: inside;
   list-style-type: disc;
